@@ -45,4 +45,6 @@ extern unsigned char *no_key;
 int yncheck PARAMS((unsigned char *string, int c));
 int ynchecks PARAMS((unsigned char *string, unsigned char *s));
 
+int ureload(BW *bw);
+
 #endif
