@@ -1,3 +1,5 @@
+- Add reload command to reload file from disk
+
 - Modify configure scrips to use docdir for extra documents and
   datadir/joe for syntax and i18n files.
 
